--- a/THANKS
+++ b/THANKS
@@ -68,6 +68,7 @@
   and generally assist in the libtool maintainership process:
 
   Alexei Sheplyakov		varg@theor.jinr.ru
+  Alon Bar-Lev			alon.barlev@gmail.com
   Andreas Schwab		schwab@suse.de
   Andrey Slepuhin		pooh@msu.ru
   Aneesh Kumar K.V		kvaneesh@hotmail.com
