--- a/THANKS
+++ b/THANKS
@@ -88,6 +88,7 @@
   Edouard G. Parmelan		Edouard.Parmelan@France.NCR.COM
   Erez Zadok			ezk@shekel.mcl.cs.columbia.edu
   Eric Estievenart		eric@via.ecp.fr
+  Ethan Mallove			ethan.mallove@sun.com
   Frank Ch. Eigler		fche@cygnus.com
   Fred Cox			sailorfred@yahoo.com
   H.J. Lu			hjl@gnu.org
