Another missing $EXEEXT in the new testsuite.
* tests/runpath-in-lalib.at (Runpath in libtool library files):
Add $EXEEXT overlooked in patch yesterday.

Signed-off-by: Ralf Wildenhues <Ralf.Wildenhues@gmx.de>

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2008-11-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
+
+	* tests/runpath-in-lalib.at (Runpath in libtool library files):
+	Add $EXEEXT overlooked in patch yesterday.
+
 2008-11-23  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix expout and experr line ending issues.
