--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2008-11-28  Paolo Bonzini  <bonzini@gnu.org>
+
+	Do not use $ECHO within eval-ed `...`, as %s\\n becomes %s\n.
+	* HACKING: Document func_echo_all.
+	* libltdl/m4/libtool.m4: Use it within backticks that appear in
+	eval-ed variables.  Reported by Akim Demaille.
+
 2008-11-24  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Fix func_infer_tag $ECHO usage; some testsuite exposure.
