--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2009-01-19  Roumen Petrov  <bugtrack@roumenpetrov.info>  (tiny change)
+
+	Add missing $EXEEXT to java test.
+	* tests/convenience.at (Java convenience archives): Add $EXEEXT.
+
 2009-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Bump copyright years.
