--- a/THANKS
+++ b/THANKS
@@ -128,6 +128,7 @@
   Rainer Tammer			tammer@tammer.net
   Ralf Menzel			menzel@ls6.cs.uni-dortmund.de
   Richard Purdie		rpurdie@rpsys.net
+  Robert Millan			rmh@aybabtu.com
   Robert Ögren			lists@roboros.com
   Roberto Bagnara		bagnara@cs.unipr.it
   Roland Mainz			roland.mainz@nrubsig.org
