--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-21  Charles Wilson  <libtool@cwilson.fastmail.fm>
+
+	Minor cygwin cleanup
+	* libltdl/config/ltmain.m4sh (func_generate_dlsyms): Correct
+	case pattern for cygwin.
+
 2009-01-19  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
 	Avoid failure due to Cygwin path detection bug.
