--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-01-23  Charles Wilson  <libtool@cwilson.fastmail.fm>
+
+	Add tests for cwrapper with -std=c89 and -std=c99
+	* tests/cwrapper.at: New file.
+	* Makefile.am: Add tests/cwrapper.at.
+
 2009-01-22  Peter Rosin  <peda@lysator.liu.se>
 
 	Unify line endings in localization test.
